# django-start

./: .gitignore  README.md  env-sample.txt  pyproject.toml  requirements.txt  temp.py
accounts/: account_adapter.py  admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_account_email.py
accounts/tests/: test_user_model.py
config/: settings.py  urls.py
core/: models.py  urls.py  views.py
core/tests/: test_views_about.py  test_views_home.py
static/css/: base.css
templates/: 403_csrf.html  500.html  base.html
templates/account/: email.html  email_confirm.html
templates/core/: about.html  index.html
